<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.TermsActivity">
    <TextView
        android:id="@+id/bar_title_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bar_title_terms"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_margin="8dp"/>
    <TextView
        android:id="@+id/tvTerms1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/terms1"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_margin="8dp"/>
    <TextView
        android:id="@+id/tvTerms2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/terms2"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_margin="8dp"/>
    <TextView
        android:id="@+id/tvTerms3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/terms3"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_margin="8dp"/>

</LinearLayout>